--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -25,6 +25,10 @@ http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id = "WebApp_ID" version = "
 		<servlet-name>ControladorLogin</servlet-name>
 		<servlet-class>controladores.ControladorLogin</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>ControladorEstadisticas</servlet-name>
+		<servlet-class>controladores.ControladorEstadisticas</servlet-class>
+	</servlet>
 	
 	<servlet-mapping>
 		<servlet-name>ControladorIngresarFichada</servlet-name>
@@ -41,5 +45,9 @@ http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id = "WebApp_ID" version = "
 	<servlet-mapping>
 		<servlet-name>ControladorLogin</servlet-name>
 		<url-pattern>/ControlLogin</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ControladorEstadisticas</servlet-name>
+		<url-pattern>/Estadisticas</url-pattern>
 	</servlet-mapping>
 </web-app >
