--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 build/classes/hibernate.cfg.xml
 src/dao/UsuarioDao.java
 src/hibernate.cfg.xml
+src/hibernate.cfg.xml
+build/classes/hibernate.cfg.xml
+*.xml
